fixing tabs overflow in firefox

--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,7 @@ body {
     flex-flow: row nowrap;
     justify-content: space-evenly;
     align-items: flex-start;
+    width: 100%;
     padding: 0 25%;
 }
 .tabs__button  {
